Finalizado con retoques

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -20,14 +20,14 @@
       <!-- =================NAVBAR================= -->
   <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container-fluid">
-          <img src="../sources/img/logo.png" alt="Motorsite" width="180" height="84">
+        <a href="./index.html"><img src="../sources/img/logo.png" alt="Motorsite" width="180" height="84"></a>
         <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active text-light fs-6 fw-bold ms-3 aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./motocicletas.html">Motocicletas</a>
@@ -162,7 +162,7 @@
           <!-- =================FOOTER DESCRIPTIVO================= --> 
             <section>
               <div class="row">
-                <div class="col text-light text-justify ms-5 mt-3">
+                <div class="col text-light text-justify mt-3">
                   <h1 class="fs-3 ms-4">Sedes</h1>
                   <ul class="list-footer">
                     <li><a href="">Bogotá</a></li>
