--- a/pages/financiacion.html
+++ b/pages/financiacion.html
@@ -24,14 +24,14 @@
       <!-- =================NAVBAR================= -->
   <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container-fluid">
-          <img src="../sources/img/logo.png" alt="Motorsite" width="180" height="84">
+        <a href="./index.html"><img src="../sources/img/logo.png" alt="Motorsite" width="180" height="84"></a>
         <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active text-light fs-6 fw-bold ms-3 aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./motocicletas.html">Motocicletas</a>
@@ -60,8 +60,8 @@
       <!-- =================BANNER MOTOCILETAS================= -->
       <div class="container-fluid">
         <div class="ban-4 text-center row">
-          <h1 class="mt-5 mb-4 titulo-mitad text-light fs-4">¡NO ESPERES PARA CUMPLIR TU SUEÑO!</h1>      
-          <h1 class="mt-2 mb-5 titulo-mitad text-light fs-4">SOLICITA TU CREDITO</h1>   
+          <h1 class="mt-5 mb-4 titulo-mitad text-light fs-5">¡NO ESPERES PARA CUMPLIR TU SUEÑO!</h1>      
+          <h1 class="mt-2 mb-5 titulo-mitad text-light fs-5">SOLICITA TU CREDITO</h1>   
           <h5 class="mt-2 mb-5 texto-mitad text-light p-1">Tenemos los mejores planes de financición con bancos aliados para que tengas la moto de tus sueños</h>
         </div>
       </div>
@@ -74,7 +74,7 @@
           <div>
               <h3 class="fs-8 mt-4 px-4 pb-1 mb-4">Bancos Aliados</h3>
               <p class="px-4">Los bancos con las mejores tasas de financiación son nuestros aliados.</p>
-              <button type="button" class="btn btn-outline-danger">Ver Más</button>
+              <button type="button" class="btn btn-outline-danger mb-5">Ver Más</button>
           </div>
       </div>
       <div class="col text-center">
@@ -82,7 +82,7 @@
           <div>
               <h3 class="fs-8 mt-4 px-4 pb-1 mb-4">Chat con Asesor</h3>
               <p class="px-4">Usa ya nuestro Chat personalizado con asesores disponibles.</p>
-              <button type="button" class="btn btn-outline-danger">Chat</button>
+              <button type="button" class="btn btn-outline-danger mb-5">Chat</button>
           </div>
       </div>
       <div class="col text-center">
