--- a/pages/index.html
+++ b/pages/index.html
@@ -24,14 +24,14 @@
             <!-- =================NAVBAR================= -->
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid">
-                <img src="../sources/img/logo.png" alt="Motorsite" width="180" height="84">
+                <a href="./index.html"><img src="../sources/img/logo.png" alt="Motorsite" width="180" height="84"></a>
               <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active text-light fs-6 fw-bold ms-3 aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./motocicletas.html">Motocicletas</a>
@@ -89,7 +89,7 @@
         <!-- =================TEXTO DESCRIPTIVO================= --> 
         <section class="w-50 mx-auto text-center pt-5">
             <h1 class="titulo-mitad p-3 fs-2 border-top border-3">Mereces lo mejor, mereces nuevas aventuras y retos, <span class="text-danger"> mereces ser parte de esta familia.</span></h1>
-            <p class="texto-mitad p-3 fs-4"><span class="text-danger fw-bold">Motorsite </span>es el universo para los que somos amantes de los dos ruedas, vivímos la pasion de los caballos de fuerza.</p>
+            <p class="texto-mitad p-3 fs-4"><span class="text-danger fw-bold">MOTORSITE </span>es el universo para los que somos amantes de los dos ruedas, vivímos la pasión de los caballos de fuerza.</p>
         </section>
         <!-- =================SECCIONES================= --> 
         <section class="container-fluid">
@@ -97,29 +97,29 @@
                 <div class="col-lg-6 col-md-12 col-sm-12 text-center">
                     <img src="../sources/img/Modelos2023.jpg" class="rounded-4" alt="" width="280" height="160">
                     <div>
-                        <h3 class="fs-8 mt-4 px-4 pb-1">Modelos 2023</h3>
-                        <p class="px-4">Mira lo último en modelos y tecnología que hemos traído para tí.</p>
+                        <h3 class="fs-8 mt-4 px-4 pb-1 texto-mitad">Modelos 2023</h3>
+                        <p class="px-4 mb-5">Mira lo último en modelos y tecnología que hemos traído para tí.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 text-center">
                     <img src="../sources/img/asesoramiento.jpg" class="rounded-4" alt="" width="280" height="160">
                     <div>
-                        <h3 class="fs-8 mt-4 px-4 pb-1">Asesoramiento</h3>
-                        <p class="px-4">Recibe un asesoramiento completo y enseñanza para que tomes la mejor decisión.</p>
+                        <h3 class="fs-8 mt-4 px-4 pb-1 texto-mitad">Asesoramiento</h3>
+                        <p class="px-4 mb-5">Recibe un asesoramiento completo y enseñanza para que tomes la mejor decisión.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 text-center">
                     <img src="../sources/img/mantenimiento.jpg" class="rounded-4" alt="" width="280" height="160">
                     <div>
-                        <h3 class="fs-8 mt-4 px-4 pb-1">Mantenimiento</h3>
-                        <p class="px-4">Sabemos lo importante que es tu moto, por eso tenemos los mejores expertos disponibles.</p>
+                        <h3 class="fs-8 mt-4 px-4 pb-1 texto-mitad">Mantenimiento</h3>
+                        <p class="px-4 mb-5">Sabemos lo importante que es tu moto, por eso tenemos los mejores expertos disponibles.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 text-center">
                   <img src="../sources/img/clientes_felices.jpg" class="rounded-4" alt="" width="280" height="160">
                   <div>
-                      <h3 class="fs-8 mt-4 px-4 pb-1">Clientes Satisfechos</h3>
-                      <p class="px-4">Opiniones testimonios y experiencias de nuestros clientes con nuestra marca.</p>
+                      <h3 class="fs-8 mt-4 px-4 pb-1 texto-mitad">Clientes Satisfechos</h3>
+                      <p class="px-4 mb-5">Opiniones testimonios y experiencias de nuestros clientes con nuestra marca.</p>
                   </div>
                 </div>
             </div>
